<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Svenska texter -->
    
    <!-- General -->
    <string name="app_name">VoteMaster</string>
    <string name="action_settings">Inställningar</string>
    
    <!-- Start -->
    <string name="start_btn_create">Skapa omröstning</string>
	<string name="start_btn_actives">Aktiva omröstningar</string>
	<string name="start_btn_result">Resultat</string>
	<string name="start_btn_settings">Inställningar</string>
    
    
    <!-- Create -->
    <string name="create_label_header">Skapa omröstning</string>
    <string name="create_label_name">Namn på omröstning</string>
    <string name="create_label_description">Beskrivning</string>
    <string name="create_label_nbrOfCandidates">Antal Kandidater</string>
    <string name="create_label_nbrOfVotes">Antal röster</string>
    <string name="create_label_candidates">Kandidater</string>
    <string name="create_btn_create">Skapa omröstning</string>  
    
    <!-- Vote -->
    <string name="vote_btn_vote">Rösta</string>

    <!-- Actives -->
    
    <!-- Settings -->
    <string name="pref_label_cat">Röstningsinställningar</string>
    <string name="pref_label_music">Ljud</string>
    <string name="pref_label_pass">Lösenord</string>
    <string name="pref_label_wait">Väntetid</string>
    
</resources>
