<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <Button
        android:id="@+id/btn_create"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="200dp"
        android:layout_marginTop="100dp"
        android:text="@string/start_btn_create" />

    <Button
        android:id="@+id/btn_actives"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/btn_create"
        android:layout_below="@+id/btn_create"
        android:layout_marginTop="70dp"
        android:text="@string/start_btn_actives" />

    <Button android:id="@+id/btn_result" android:layout_width="200dp" android:layout_height="60dp" android:layout_alignLeft="@+id/btn_actives" android:layout_below="@+id/btn_actives" android:layout_marginTop="70dp" android:text="@string/start_btn_result"/>
    <Button android:id="@+id/btn_settings" android:layout_width="200dp" android:layout_height="60dp" android:layout_alignRight="@+id/btn_result" android:layout_below="@+id/btn_result" android:layout_marginTop="70dp" android:text="@string/start_btn_settings"/>
    <ImageView android:id="@+id/imageView1" android:layout_width="200dp" android:layout_height="200dp" android:layout_alignTop="@+id/btn_actives" android:src="@drawable/ic_launcher"/>

</RelativeLayout>
